--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/devops-cd-demo:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/demo_repo_mor:latest
           platforms: linux/arm64
           # למשל: galgdev/devops-cd-demo:latest
 
