--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,9 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/demo_repo_mor:latest
+          tags: 
+            ${{ secrets.DOCKERHUB_USERNAME }}/demo_repo_mor:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/demo_repo_mor:${{ github.sha }} #תוספת חדשה
           platforms: linux/arm64
           # למשל: galgdev/devops-cd-demo:latest
 
@@ -41,13 +43,26 @@ jobs:
     steps:
       - name: Deploy to server via SSH
         uses: appleboy/ssh-action@v1.0.3
+        env:  #תוספת חדשה
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }} #תוספת חדשה
+          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }} #תוספת חדשה
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
+          env: DOCKERHUB_USERNAME,DOCKERHUB_TOKEN
           script: |
+            set -e
             cd /home/ubuntu/Devops_year_3/docker_compose_test
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/demo_repo_mor
+            #Login to DockerHub(required for PRIVATE repos)
+            echo "$DOCKERHUB_TOKEN" | docker login -u "DOCKERHUB_USERNAME" -- password=stdin
 
-            docker compose down
-            docker compose up -d
+            echo "DOCKERHUB_USERNAME=$DOCKERHUB_USERNAME" > .env
+            echo "IMAGE_TAG=${{ github.sha }}" >> .env
+            docker compose pull
+            docker compose up -d --force-recreate
+        #
+        #   docker pull ${{ secrets.DOCKERHUB_USERNAME }}/demo_repo_mor
+
+        #   docker compose down
+        #   docker compose up -d
