--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,9 +30,9 @@ jobs:
         with:
           context: .
           push: true
-          tags: 
+          tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/demo_repo_mor:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/demo_repo_mor:${{ github.sha }} #תוספת חדשה
+            ${{ secrets.DOCKERHUB_USERNAME }}/demo_repo_mor:${{ github.sha }} 
           platforms: linux/arm64
           # למשל: galgdev/devops-cd-demo:latest
 
@@ -50,12 +50,12 @@ jobs:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
-          env: DOCKERHUB_USERNAME,DOCKERHUB_TOKEN
+          envs: DOCKERHUB_USERNAME,DOCKERHUB_TOKEN
           script: |
             set -e
             cd /home/ubuntu/Devops_year_3/docker_compose_test
             #Login to DockerHub(required for PRIVATE repos)
-            echo "$DOCKERHUB_TOKEN" | docker login -u "DOCKERHUB_USERNAME" -- password=stdin
+            echo "$DOCKERHUB_TOKEN" | docker login -u "DOCKERHUB_USERNAME" --password=stdin
 
             echo "DOCKERHUB_USERNAME=$DOCKERHUB_USERNAME" > .env
             echo "IMAGE_TAG=${{ github.sha }}" >> .env
