--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
             set -e
             cd /home/ubuntu/Devops_year_3/docker_compose_test
             # Login to DockerHub (required for PRIVATE repos)
-            echo "$DOCKERHUB_TOKEN" | docker login -u "DOCKERHUB_USERNAME" --password=stdin
+            echo "$DOCKERHUB_TOKEN" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
 
             echo "DOCKERHUB_USERNAME=$DOCKERHUB_USERNAME" > .env
             echo "IMAGE_TAG=${{ github.sha }}" >> .env
