--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,14 +51,33 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
           envs: DOCKERHUB_USERNAME,DOCKERHUB_TOKEN
+          # script: |
+          #   set -e
+          #   cd /home/ubuntu/Devops_year_3/docker_compose_test
+          #   # Login to DockerHub (required for PRIVATE repos)
+          #   echo "$DOCKERHUB_TOKEN" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+          #   echo "DOCKERHUB_USERNAME=$DOCKERHUB_USERNAME" > .env
+          #   echo "IMAGE_TAG=${{ github.sha }}" >> .env
+          #   docker compose pull
+          #   docker compose up -d --force-recreate
           script: |
             set -e
             cd /home/ubuntu/Devops_year_3/docker_compose_test
-            # Login to DockerHub (required for PRIVATE repos)
+            
+            # התנתקות וניקוי קונטיינרים ישנים שתקועים
+            docker compose down || true
+            
+            # Login to DockerHub
             echo "$DOCKERHUB_TOKEN" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+            
+            # עדכון קובץ ה-env
             echo "DOCKERHUB_USERNAME=$DOCKERHUB_USERNAME" > .env
             echo "IMAGE_TAG=${{ github.sha }}" >> .env
+            
+            # משיכת אימג'ים חדשים
             docker compose pull
+            
+            # ניסיון הרצה
             docker compose up -d --force-recreate
         #
         #   docker pull ${{ secrets.DOCKERHUB_USERNAME }}/demo_repo_mor
